--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "centraldesktop/protobuf-php": "0.5.*"
     },
     "require-dev": {
-      "phpunit/phpunit": "3.7.*"
+      "phpunit/phpunit": "^4.8.36*"
     },
     "autoload": {
         "classmap": ["src/"]
